sites/indigo/clusters/dal-indigo-core-1/phase-2-auth/overlays/keycloak/deployment_override.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: keycloak
spec:
  template:
    spec:
      containers:
        - name: keycloak
