sites/indigo/clusters/dal-indigo-core-1/phase-2-auth/overlays/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  annotations:
    cert-manager.io/cluster-issuer: dalmura-letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname=auth.dalmura.cloud.
spec:
  tls:
    - hosts:
      - auth.dalmura.cloud
      secretName: keycloak-cert
  rules:
  - host: auth.dalmura.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 8080
